# browser-proxy-launcher

./: .gitignore  CLAUDE.md  PRD.md  README.md  next.config.js  package.json  pnpm-lock.yaml  test-minimized.md  tsconfig.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
local_proxies/: 3proxy.cfg  docker-compose.yml
scripts/: bump_version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  lib.rs  main.rs
src-tauri/src/browser/: detector.rs  mod.rs  registry.rs
src-tauri/src/commands/: browser_commands.rs  mod.rs  settings_commands.rs  tray_commands.rs  window_commands.rs
src-tauri/src/settings/: config.rs  mod.rs  persistence.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.css  page.tsx
src/app/about/: page.tsx
src/app/settings/: page.tsx
src/components/: ConfirmDialog.tsx  FavoritesList.tsx  Header.tsx  ProxyDialog.tsx  ProxyList.tsx  ProxyStatus.tsx  QueryProvider.tsx  SettingsPage.tsx  SiteDialog.tsx  SitesList.tsx  TrayManager.tsx
src/components/ui/: button.tsx  dialog.tsx  select.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useAppData.ts  useBrowsers.ts  useSettings.ts
src/lib/: mock-data.ts  tauri-api.ts
src/types/: index.ts
